Closed Bug 1047743 Opened 11 years ago Closed 11 years ago

Screen sharing with multiple screens is broken (Mac only)

Categories

(Core :: WebRTC, defect)

34 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34
Tracking Status
firefox33 --- fixed
firefox34 --- fixed

People

(Reporter: drno, Assigned: m_and_m)

References

Details

Attachments

(3 files, 1 obsolete file)

When I share the screen while having a second screen attached to my MacBook Pro I get a big black box with some super small content in the upper left corner of that box. I can attach a screen shot when I'm back in the office next week.
Blocks: 1040061
This could be a duplicate of bug 1040098. The summary there is about the cursor position being wrong, but my screenshot I attached also shows the a large black area.
Not only that it's a bit difficult to move the global indicator (drag with mouse), but it's impossible to move it to the second screen. 34.0a1 (2014-08-13) Win 7 x64
Matt - any idea what this would be? Thanks
Flags: needinfo?(linuxwolf)
My speculation is that this is caused displays of different pixel depths. Trying to balance this on a one large virtual source I can imagine being very difficult to get working. A glance at the Mac screen capture code lends some credence to it (http://hg.mozilla.org/mozilla-central/annotate/4d94eeca89f3/media/webrtc/trunk/webrtc/modules/desktop_capture/screen_capturer_mac.mm#l637). The "right" solution to this is to properly support multiple displays, each as an independent source. In the meantime, it might be possible to limit the source to a primary physical display (where the taskbar/menubar are located).
Flags: needinfo?(linuxwolf)
Matt -- Can you pick this bug up and work to fix it this week?
Flags: needinfo?(linuxwolf)
Per irc, Matt is going to take this bug. So far, we've only heard reports of this happening on Mac, and he will try to fix the Mac only case. If there are issues on Windows, please let's open a new bug. Matt is also going to timebox this fix; we're going to try to have a patch up by the end of this week. If this bug becomes more complex than we think it will be and goes past this week, Matt will tell me, and I'll likely need to find a new owner. I'd like to uplift this fix to Fx33 if we can get it in time. I don't consider this a hard blocker to shipping the screensharing feature.
Assignee: nobody → linuxwolf
Flags: needinfo?(linuxwolf)
Summary: Screen sharing with multiple screens is broken → Screen sharing with multiple screens is broken (Mac only)
Whiteboard: [screensharing-uplift]
Attachment #8476807 - Flags: review?(gpascutto)
Attachment #8476807 - Flags: review?(gpascutto) → review+
Interdiff over attachment 8476807 [details] [diff] [review] to keep the previous behavior on other platforms.
Changes to make sure other platforms behave the same as they did before this patch. Interdiff is attachment 8479981 [details] [diff] [review].
Attachment #8476807 - Attachment is obsolete: true
Attachment #8479982 - Flags: review?(gpascutto)
try of latest patch: https://tbpl.mozilla.org/?tree=Try&rev=68ad8d07cfcc The 2 Android failures look like they're unrelated to this work.
Comment on attachment 8479982 [details] [diff] [review] v2 - Screen sharing with multiple screens is broken (Mac only) Clearing gcp as Jesup r+'ed.
Attachment #8479982 - Flags: review?(gpascutto)
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Comment on attachment 8479982 [details] [diff] [review] v2 - Screen sharing with multiple screens is broken (Mac only) Approval Request Comment [Feature/regressing bug #]: screensharing [User impact if declined]: problems screensharing with multiple screens on Mac [Describe test coverage new/current, TBPL]: manual testing - no multiple machines on tbpl [Risks and why]: very low risk; mostly just setting the right screen names [String/UUID change made/needed]: none
Attachment #8479982 - Flags: approval-mozilla-aurora?
Attachment #8479982 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [screensharing-uplift]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: