Bug 1047743 - Screen sharing with multiple screens is broken (Mac only). r=jesup * * * Bug 1047743 - interdiff to not impact other platforms